# dsa

Big Number/: bignumber.cpp
BigNumber/: finalbignumber.cpp
Big_Number/: bignumber.cpp
Project postfix&prefix/: CMakeLists.txt  main (1).cpp
Tamrin Fasl 1/: Soal 18.cpp  Soal 19.cpp  soal 1.cpp  soal 10.cpp  soal 11.cpp  soal 12.cpp  soal 13.cpp  soal 14.cpp  soal 15.cpp  soal 16.cpp  soal 17.cpp  soal 2.cpp  soal 20.cpp  soal 3.cpp  soal 4.cpp  soal 5.cpp  soal 6.cpp  soal 7.cpp  soal 8.cpp  soal 9.cpp
Tamrin Fasle4/: Soal2.cpp  Soal3.cpp
Tamrin Fasle5/: Q11.CPP  Q12.cpp  Q2.cpp
Tamrin Fasle7/: Q1.cpp  Q10.cpp  Q2.cpp  Q3.cpp  Q5.cpp  Q8.cpp  Q9.cpp
Tamrin Fasle9/: Q2.cpp
Tamrin fasle6/: Q8.cpp
tamrin fasle 3/: soal1.cpp  soal2.cpp  soal4.cpp  soal5.cpp  soal6.cpp  soal7.cpp
